Add repositories and unit of work

--- a/Movies.API/appsettings.json
+++ b/Movies.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MoviesApiContext": "Server=(localdb)\\mssqllocaldb;Database=MoviesApiContext-74235e40-aa11-4746-88bd-0d4ea6125ffb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-74235e40-aa11-4746-88bd-0d4ea6125ffb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
