Add Services and folder name changes

--- a/Movies.API/Movies.API.csproj
+++ b/Movies.API/Movies.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Movies.Data\Movies.Data.csproj" />
+    <ProjectReference Include="..\Movies.Services\Movies.Services.csproj" />
   </ItemGroup>
 
 </Project>
