--- a/Movies.Presentation/Movies.Presentation.csproj
+++ b/Movies.Presentation/Movies.Presentation.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Movies.Contracts\Movies.Contracts.csproj" />
+    <ProjectReference Include="..\Movies.Contracts\Movies.Services.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
