--- a/Movies.API/Movies.API.csproj
+++ b/Movies.API/Movies.API.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Movies.Data\Movies.Data.csproj" />
     <ProjectReference Include="..\Movies.Presentation\Movies.Presentation.csproj" />
+    <ProjectReference Include="..\Movies.Services.Contracts\Movies.Services.Contracts.csproj" />
     <ProjectReference Include="..\Movies.Services\Movies.Services.csproj" />
   </ItemGroup>
 
